[package]
name = "png-framing"
description = "Encoding and decoding PNG images. That's it."
keywords = ["png", "encoding", "decoding", "lossless", "image"]
license = "MIT"
version = "0.4.0"
authors = ["Ram <quadrupleslap@gmail.com>"]
repository = "https://github.com/endogeny/png-framing"
documentation = "https://docs.rs/png-framing"

[dependencies]
lodepng = "1.1"
framing = "0.6"
